tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/bool_to_int.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
const x:int = true

